--- a/header2.html
+++ b/header2.html
@@ -1,5 +1,5 @@
-<div class="  header-section header-fixed container  " style="position: fixed; top: 0; left: 0; right: 0; ">
-  <header class="d-flex flex-wrap align-items-center justify-content-between justify-content-md-between py-3">
+<div class="  header-section header-fixed " style="position: fixed; top: 0; left: 0; right: 0; ">
+  <header class="d-flex container flex-wrap align-items-center justify-content-between justify-content-md-between py-3">
 
 
     <div class="col-md-3 mb-md-0 ">
@@ -89,11 +89,9 @@
 
     <div class="col-md-3 d-flex justify-content-end">
       <ul class="nav nav-pills">
-        <li class="nav-item"><a href="#" class="nav-link fs-16 bp-3" aria-current="page">Add my place</a></li>
-
+        <li class="nav-item"><a href="#" class="nav-link fs-16 bp-3 " style="min-width: fit-content;" aria-current="page">Add my place</a></li>
       </ul>
       <!--menu items-->
-
       <div class="dropdown">
         <button class="btn btn-outline-secondary dropdown" type="button" data-bs-toggle="dropdown"
           aria-expanded="false">
