--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-sm-3 col-md-3 col-lg-3 me-auto">
         <a href="/" style="position: relative !important;" class=" header-home-icon d-inline-flex link-body-emphasis text-decoration-none">
-          <img src="img/logo.png" alt="">
+          <img src="img/logo.svg" alt="">
         </a>
         <p class="py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
           labore et dolore magna aliqua.</p>
