--- a/index.html
+++ b/index.html
@@ -18,24 +18,7 @@
     href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
- <style>
-   .carousel-container {
-            position: relative;
-            width: 100%;
-            overflow: hidden;
-        }
 
-        .carousel-slide {
-            display: flex;
-            transition: transform 0.5s ease-in-out;
-        }
-
-        .carousel-slide img {
-            width: 100%;
-        }
-
-
- </style>
 </head>
 
 <body>
@@ -479,13 +462,12 @@
   </section>
 
 
-  <section class="rev">
+  <section  class="mt-5">
     <div class=" review-box-m container-xxl container-sm">
-      <h3 class="mb-4">Reviews from our community</h2>
+      <h3 class="mb-4">Reviews from our community</h3>
 
 
         <div class="review-box">
-
 
           <div class="item">
             <div class="review-card">
@@ -634,163 +616,56 @@
         </div><!--review-box end -->
 
     </div>
-
-
   </section>
   </section>
 
   <div id="footer" style="margin-top: -5rem;"></div>
 
-
-  <script>
-    window.addEventListener('scroll', function () {
-      // Check if window width is greater than or equal to 700px
-      var scrollHeight = window.scrollY;
-      var searchBox = document.getElementById('search-box-m');
-      var searchBg = document.getElementById('bg-white');
-
-      if (window.innerWidth <= 1000) {
-
-        if (scrollHeight > 10) {
-          searchBg.classList.add('bg-white');
-        } else {
-          searchBg.classList.remove('bg-white');
-        }
-      }
-      if (window.innerWidth >= 1000) {
-
-        if (scrollHeight > 350) {
-          searchBg.classList.add('bg-white');
-        } else {
-          searchBg.classList.remove('bg-white');
-        }
-      }
-
-      if (window.innerWidth >= 1000) {
-
-        if (scrollHeight > 350) {
-          searchBox.classList.add('search-box-m');
-          searchBg.classList.add('bg-white');
-        } else {
-          searchBox.classList.remove('search-box-m');
-          searchBg.classList.remove('bg-white');
-        }
-      }
-
-    });
-  </script>
-
-
-  <script>
-  let lastScrollTop = 0;
-
-window.addEventListener("scroll", function () {
-  let currentScroll = window.pageYOffset || document.documentElement.scrollTop;
-
-  if (currentScroll > lastScrollTop) {
-    // Scroll down
-    document.getElementById("mobileFooter").style.transform = "translateY(100%)";
-  } else {
-    // Scroll up
-    document.getElementById("mobileFooter").style.transform = "translateY(0)";
-  }
-
-  lastScrollTop = currentScroll <= 0 ? 0 : currentScroll; // For Mobile or negative scrolling
-});
-
-  </script>
-
-
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-  <script src="./script.js"></script>
   <script src="js/jquery-3.7.1.js"></script>
   <script src="js/headerFooter.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/carousel.js"></script>
-  <script>
-    $(document).ready(function () {
-      try {
-        $('.discover-box').slick({
-          lazyLoad: 'ondemand',
-          slidesToShow: 3,
-          arrows: false,
-          prevArrow: '<button class="sk-button sk-round arrow-prev"><span class="sk-icons"><svg width="20" height="20"><use xlink:href="#skiconsLeftCheveron"></use></svg></span></button>',
-          nextArrow: '<button class="sk-button sk-round arrow-next"><span class="sk-icons"><svg width="20" height="20"><use xlink:href="#skiconsLeftCheveron"></use></svg></span></button>',
-          dots: false,
-          autoplay: true,
-          responsive: [
-            {
-              breakpoint: 1200,
-              settings: {
-                slidesToShow: 2,
-              }
-            },
-            {
-              breakpoint: 800,
-              settings: {
-                slidesToShow: 1
-              }
-            }
-          ]
-        });
-      }
-      catch (ex) {
-        console.log("Error initiating carousel" + ex)
-      }
-      document.getElementById("slider-main").style.height = "auto"
-    });
-
-    $(document).ready(function () {
-      try {
-        $('.review-box').slick({
-          slidesToShow: 3,
-          arrows: false,
-          prevArrow: '<button class="sk-button sk-round arrow-prev"><span class="sk-icons"><svg width="20" height="20"><use xlink:href="#skiconsLeftCheveron"></use></svg></span></button>',
-          nextArrow: '<button class="sk-button sk-round arrow-next"><span class="sk-icons"><svg width="20" height="20"><use xlink:href="#skiconsLeftCheveron"></use></svg></span></button>',
-          dots: false,
-          autoplay: true,
-          responsive: [
-            {
-              breakpoint: 1200,
-              settings: {
-                slidesToShow: 2,
-              }
-            },
-            {
-              breakpoint: 800,
-              settings: {
-                slidesToShow: 1
-              }
-            }
-          ]
-        });
-      }
-      catch (ex) {
-        console.log("Error initiating carousel" + ex)
-      }
-
-    });
-
-    $(document).ready(function () {
-      try {
-        $('.img-slider').slick({
-          lazyLoad: 'ondemand',
-          slidesToShow: 1,
-          arrows: true,
-          prevArrow: '<button class="sk-button sk-round arrow-prev"><span class="sk-icons"><svg width="20" height="20"><use xlink:href="#skiconsLeftCheveron"></use></svg></span></button>',
-          nextArrow: '<button class="sk-button sk-round arrow-next"><span class="sk-icons"><svg width="20" height="20"><use xlink:href="#skiconsLeftCheveron"></use></svg></span></button>',
-          dots: true,
-        });
-      }
-      catch (ex) {
-        console.log("Error initiating carousel" + ex)
-      }
-      document.getElementById("slider-main").style.height = "auto"
-    });
-
-  </script>
-
   <script src="js/script.js"></script>
+
+  <script>
+//index header 
+window.addEventListener('scroll', function () {
+    // Check if window width is greater than or equal to 700px
+    var scrollHeight = window.scrollY;
+    var searchBox = document.getElementById('search-box-m');
+    var searchBg = document.getElementById('bg-white');
+
+    if (window.innerWidth <= 1000) {
+
+      if (scrollHeight > 10) {
+        searchBg.classList.add('bg-white');
+      } else {
+        searchBg.classList.remove('bg-white');
+      }
+    }
+    if (window.innerWidth >= 1000) {
+
+      if (scrollHeight > 350) {
+        searchBg.classList.add('bg-white');
+      } else {
+        searchBg.classList.remove('bg-white');
+      }
+    }
+
+    if (window.innerWidth >= 1000) {
+
+      if (scrollHeight > 350) {
+        searchBox.classList.add('search-box-m');
+        searchBg.classList.add('bg-white');
+      } else {
+        searchBox.classList.remove('search-box-m');
+        searchBg.classList.remove('bg-white');
+      }
+    }
+
+  });
+  </script>
 
 </body>
 
