--- a/details.html
+++ b/details.html
@@ -77,19 +77,19 @@
     <div class="container margin-top-none ">
 
       <div class="grid-container " ontouchstart="handleTouchStart(event)" ontouchmove="handleTouchMove(event)">
-        <div class="one grid-item carousel-slide">
+        <div class="one grid-item carousel-slide-img">
           <img src="img/d-img1.jpg" alt="Image 1">
         </div>
-        <div class="grid-item carousel-slide">
+        <div class="grid-item carousel-slide-img">
           <img src="img/d-img2.jpg" alt="Image 2">
         </div>
-        <div class="grid-item carousel-slide">
+        <div class="grid-item carousel-slide-img">
           <img src="img/d-img3.jpg" alt="Image 2">
         </div>
-        <div class="grid-item carousel-slide">
+        <div class="grid-item carousel-slide-img">
           <img src="img/d-img4.jpg" alt="Image 2">
         </div>
-        <div class="grid-item carousel-slide">
+        <div class="grid-item carousel-slide-img">
           <img src="img/d-img2.jpg" alt="Image 2">
         </div>
 
@@ -389,113 +389,6 @@
               <img src="img/sc-calander.png" width="100%" alt="">
             </div>
 
-
-
-            <!--     
-        <div class="d-flex">
-              <div class="calender-group">
-                  <div class="datepicker-title">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
-                      <path fill="none" d="M20 28 8.7 16.7a1 1 0 0 1 0-1.4L20 4"></path>
-                    </svg>
-                    <h6>January</h6>
-                  </div>
-                  <div class="datepicker-day">
-                    <div class="day" data-day="1" data-selected="end"><span class="number">Sun</span></div>
-                      <div class="day" data-day="2"><span class="number">Mon</span></div>
-                      <div class="day" data-day="3"><span class="number">Tue</span></div>
-                      <div class="day" data-day="4"><span class="number">Wed</span></div>
-                      <div class="day" data-day="5"><span class="number">Thur</span></div>
-                      <div class="day" data-day="6"><span class="number">Fri</span></div>
-                      <div class="day" data-day="7"><span class="number">Sat</span></div>
-                  </div>
-                  <div class="datepicker-list">
-                      <div class="day line" data-day="1" data-selected="end"><span class="number">1</span></div>
-                      <div class="day line" data-day="2"><span class="number">2</span></div>
-                      <div class="day line" data-day="3"><span class="number">3</span></div>
-                      <div class="day line" data-day="4"><span class="number">4</span></div>
-                      <div class="day line" data-day="5"><span class="number">5</span></div>
-                      <div class="day line" data-day="6"><span class="number">6</span></div>
-                      <div class="day line" data-day="7"><span class="number">7</span></div>
-                      <div class="day line" data-day="8"><span class="number">8</span></div>
-                      <div class="day" data-day="9"><span class="number">9</span></div>
-                      <div class="day date-bg date-active" data-day="10"><span class="number">10</span></div>
-                      <div class="day date-bg" data-day="11"><span class="number">11</span></div>
-                      <div class="day date-bg" data-day="12"><span class="number">12</span></div>
-                      <div class="day date-bg" data-day="13"><span class="number">13</span></div>
-                      <div class="day date-bg" data-day="14"><span class="number">14</span></div>
-                      <div class="day date-bg" data-day="15"><span class="number">15</span></div>
-                      <div class="day date-bg" data-day="16"><span class="number">16</span></div>
-                      <div class="day date-bg" data-day="17"><span class="number">17</span></div>
-                      <div class="day date-bg" data-day="18"><span class="number">18</span></div>
-                      <div class="day date-bg" data-day="19"><span class="number">19</span></div>
-                      <div class="day date-bg" data-day="20"><span class="number">20</span></div>
-                      <div class="day date-bg" data-day="21"><span class="number">21</span></div>
-                      <div class="day date-bg" data-day="22"><span class="number">22</span></div>
-                      <div class="day date-bg" data-day="23"><span class="number">23</span></div>
-                      <div class="day date-bg" data-day="24"><span class="number">24</span></div>
-                      <div class="day date-bg" data-day="25"><span class="number">25</span></div>
-                      <div class="day date-bg date-active" data-day="26"><span class="number">26</span></div>
-                      <div class="day" data-day="27"><span class="number">27</span></div>
-                      <div class="day" data-day="28"><span class="number">28</span></div>
-                      <div class="day" data-day="29"><span class="number">29</span></div>
-                      <div class="day" data-day="30"><span class="number">30</span></div>
-                      <div class="day" data-day="31"><span class="number">31</span></div>
-                  </div>
-              </div>
-              
-              <div class="calender-group">
-                  <div class="datepicker-title next-month">
-                    <h6>February</h6>
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
-                      <path fill="none" d="m12 4 11.3 11.3a1 1 0 0 1 0 1.4L12 28"></path>
-                    </svg>
-                  </div>
-                  <div class="datepicker-day">
-                    <div class="day" data-day="1" data-selected="end"><span class="number">Sun</span></div>
-                      <div class="day" data-day="2"><span class="number">Mon</span></div>
-                      <div class="day" data-day="3"><span class="number">Tue</span></div>
-                      <div class="day" data-day="4"><span class="number">Wed</span></div>
-                      <div class="day" data-day="5"><span class="number">Thur</span></div>
-                      <div class="day" data-day="6"><span class="number">Fri</span></div>
-                      <div class="day" data-day="7"><span class="number">Sat</span></div>
-                  </div>
-                  <div class="datepicker-list">
-                      <div class="day" data-day="1" data-selected="end"><span class="number">1</span></div>
-                      <div class="day" data-day="2"><span class="number">2</span></div>
-                      <div class="day" data-day="3"><span class="number">3</span></div>
-                      <div class="day" data-day="4"><span class="number">4</span></div>
-                      <div class="day" data-day="5"><span class="number">5</span></div>
-                      <div class="day" data-day="6"><span class="number">6</span></div>
-                      <div class="day" data-day="7"><span class="number">7</span></div>
-                      <div class="day" data-day="8"><span class="number">8</span></div>
-                      <div class="day" data-day="9"><span class="number">9</span></div>
-                      <div class="day" data-day="10"><span class="number">10</span></div>
-                      <div class="day" data-day="11"><span class="number">11</span></div>
-                      <div class="day" data-day="12"><span class="number">12</span></div>
-                      <div class="day" data-day="13"><span class="number">13</span></div>
-                      <div class="day" data-day="14"><span class="number">14</span></div>
-                      <div class="day" data-day="15"><span class="number">15</span></div>
-                      <div class="day" data-day="16"><span class="number">16</span></div>
-                      <div class="day" data-day="17"><span class="number">17</span></div>
-                      <div class="day" data-day="18"><span class="number">18</span></div>
-                      <div class="day line" data-day="19"><span class="number">19</span></div>
-                      <div class="day line" data-day="20"><span class="number">20</span></div>
-                      <div class="day" data-day="21"><span class="number">21</span></div>
-                      <div class="day line" data-day="22"><span class="number">22</span></div>
-                      <div class="day line" data-day="23"><span class="number">23</span></div>
-                      <div class="day line" data-day="24"><span class="number">24</span></div>
-                      <div class="day line" data-day="25"><span class="number">25</span></div>
-                      <div class="day line" data-day="26"><span class="number">26</span></div>
-                      <div class="day line" data-day="27"><span class="number">27</span></div>
-                      <div class="day line" data-day="28"><span class="number">28</span></div>
-                      <div class="day line" data-day="29"><span class="number">29</span></div>
-                      <div class="day line" data-day="30"><span class="number">30</span></div>
-                      <div class="day line" data-day="31"><span class="number">31</span></div>
-                  </div>
-              </div>
-            </div>
--->
           <div class="divider"></div>
 
             <div class="text-end clear-date">
@@ -883,81 +776,10 @@
 
 
 
-
-
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-  <script src="./script.js"></script>
-
-  <script>
-    let slideIndex = 1;
-    let xDown = null;
-
-    function handleTouchStart(evt) {
-      xDown = evt.touches[0].clientX;
-    };
-
-    function handleTouchMove(evt) {
-      if (!xDown) {
-        return;
-      }
-
-      let xUp = evt.touches[0].clientX;
-      let xDiff = xDown - xUp;
-
-      if (xDiff > 0) {
-        // Swipe left
-        plusSlides(1);
-      } else {
-        // Swipe right
-        plusSlides(-1);
-      }
-      /* reset values */
-      xDown = null;
-    };
-
-    function currentSlide(n) {
-      showSlides(slideIndex = n);
-    }
-
-    function plusSlides(n) {
-      showSlides(slideIndex += n);
-    }
-
-    function showSlides(n) {
-      let i;
-      let slides = document.getElementsByClassName("carousel-slide");
-      let dotsContainer = document.getElementById("dotContainer");
-
-      if (n > slides.length) { slideIndex = 1 } // Go to first slide if reached end
-      if (n < 1) { slideIndex = slides.length } // Go to last slide if reached beginning
-
-      for (i = 0; i < slides.length; i++) {
-        slides[i].style.display = "none";
-      }
-      slides[slideIndex - 1].style.display = "block";
-
-      // Update dots' active state
-      let dots = dotsContainer.getElementsByClassName("dot");
-      for (i = 0; i < dots.length; i++) {
-        dots[i].classList.remove("active-dot");
-      }
-      dots[slideIndex - 1].classList.add("active-dot");
-    }
-
-    // Create dots dynamically
-    let dotsContainer = document.getElementById("dotContainer");
-    for (let i = 0; i < document.getElementsByClassName("carousel-slide").length; i++) {
-      let dot = document.createElement("span");
-      dot.classList.add("dot");
-      dot.setAttribute("onclick", "currentSlide(" + (i + 1) + ")");
-      dotsContainer.appendChild(dot);
-    }
-    // Highlight the active dot
-    let dots = dotsContainer.getElementsByClassName("dot");
-    dots[slideIndex - 1].classList.add("active-dot");
-
-  </script>
-
+  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/carousel.js"></script>
+  <script src="js/script.js"></script>
 
   <script>
     $('.burger, .overlay').click(function () {
@@ -983,77 +805,6 @@
 
     });
   </script>
-
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/carousel.js"></script>
-
-
-  <script>
-
-    $(document).ready(function () {
-      try {
-        $('.discover-box').slick({
-          slidesToShow: 3,
-          arrows: false,
-          prevArrow: '<button class="sk-button sk-round arrow-prev"><span class="sk-icons"><svg width="20" height="20"><use xlink:href="#skiconsLeftCheveron"></use></svg></span></button>',
-          nextArrow: '<button class="sk-button sk-round arrow-next"><span class="sk-icons"><svg width="20" height="20"><use xlink:href="#skiconsLeftCheveron"></use></svg></span></button>',
-          dots: false,
-          autoplay: true,
-          responsive: [
-            {
-              breakpoint: 768,
-              settings: {
-                slidesToShow: 2,
-              }
-            },
-            {
-              breakpoint: 600,
-              settings: {
-                slidesToShow: 1
-              }
-            }
-          ]
-        });
-      }
-      catch (ex) {
-        console.log("Error initiating carousel" + ex)
-      }
-
-    });
-
-    $(document).ready(function () {
-      try {
-        $('.review-box').slick({
-          slidesToShow: 3,
-          arrows: true,
-          prevArrow: '<button class="sk-button sk-round arrow-prev" style="background:white;"><span class="sk-icons"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="12" viewBox="0 0 18 12" fill="none"> <path d="M17 6.75C17.4142 6.75 17.75 6.41421 17.75 6C17.75 5.58579 17.4142 5.25 17 5.25V6.75ZM1 5.25C0.585787 5.25 0.25 5.58579 0.25 6C0.25 6.41421 0.585787 6.75 1 6.75V5.25ZM4.47204 11.5327C4.76624 11.8243 5.24111 11.8222 5.53269 11.528C5.82427 11.2338 5.82216 10.7589 5.52796 10.4673L4.47204 11.5327ZM3.23703 9.25269L3.76499 8.72H3.76499L3.23703 9.25269ZM3.23703 2.74731L2.70907 2.21462H2.70907L3.23703 2.74731ZM5.52796 1.53269C5.82216 1.24111 5.82428 0.766238 5.53269 0.472041C5.24111 0.177844 4.76624 0.175726 4.47204 0.467309L5.52796 1.53269ZM1.01989 6.31333L0.275909 6.40816L0.275909 6.40816L1.01989 6.31333ZM1.01989 5.68667L0.275909 5.59184L0.275909 5.59184L1.01989 5.68667ZM17 5.25H1V6.75H17V5.25ZM5.52796 10.4673L3.76499 8.72L2.70907 9.78538L4.47204 11.5327L5.52796 10.4673ZM3.76499 3.28L5.52796 1.53269L4.47204 0.467309L2.70907 2.21462L3.76499 3.28ZM3.76499 8.72C3.0495 8.01086 2.55869 7.52282 2.22659 7.10929C1.904 6.7076 1.79332 6.44958 1.76387 6.2185L0.275909 6.40816C0.354695 7.02628 0.649627 7.54122 1.05706 8.04854C1.45498 8.54403 2.01863 9.10108 2.70907 9.78538L3.76499 8.72ZM2.70907 2.21462C2.01863 2.89892 1.45498 3.45597 1.05706 3.95146C0.649628 4.45878 0.354695 4.97372 0.275909 5.59184L1.76387 5.7815C1.79332 5.55042 1.904 5.2924 2.22659 4.89071C2.55869 4.47718 3.0495 3.98914 3.76499 3.28L2.70907 2.21462ZM1.76387 6.2185C1.74538 6.07341 1.74538 5.92659 1.76387 5.7815L0.275909 5.59184C0.241364 5.86286 0.241364 6.13714 0.275909 6.40816L1.76387 6.2185Z" fill="#444444" /> </svg></span></button>',
-          nextArrow: '<button class="sk-button sk-round arrow-next" style="background:white;"><span class="sk-icons"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="12" viewBox="0 0 18 12" fill="none"> <path d="M13.528 0.467309C13.2338 0.175726 12.7589 0.177844 12.4673 0.472041C12.1757 0.766238 12.1778 1.24111 12.472 1.53269L14.235 3.28C14.9505 3.98914 15.4413 4.47718 15.7734 4.89071C15.8813 5.02509 15.9655 5.1434 16.0309 5.25L1 5.25C0.585786 5.25 0.25 5.58579 0.25 6C0.25 6.41422 0.585786 6.75 1 6.75L16.0309 6.75C15.9655 6.8566 15.8813 6.97491 15.7734 7.10929C15.4413 7.52282 14.9505 8.01086 14.235 8.72L12.472 10.4673C12.1778 10.7589 12.1757 11.2338 12.4673 11.528C12.7589 11.8222 13.2338 11.8243 13.528 11.5327L15.3227 9.7539C15.9987 9.08395 16.5511 8.53641 16.9429 8.04854C17.3504 7.54121 17.6453 7.02628 17.7241 6.40816C17.7414 6.27265 17.75 6.13632 17.75 6C17.75 5.86368 17.7414 5.72735 17.7241 5.59184C17.6453 4.97372 17.3504 4.45878 16.9429 3.95146C16.5511 3.46358 15.9987 2.91604 15.3227 2.24609L13.528 0.467309Z" fill="#444444" /> </svg></span></button>',
-          dots: true,
-          autoplay: true,
-          responsive: [
-            {
-              breakpoint: 768,
-              settings: {
-                slidesToShow: 2,
-              }
-            },
-            {
-              breakpoint: 600,
-              settings: {
-                slidesToShow: 1
-              }
-            }
-          ]
-        });
-      }
-      catch (ex) {
-        console.log("Error initiating carousel" + ex)
-      }
-
-    });
-
-  </script>
-
 
 </body>
 
