--- a/demo.html
+++ b/demo.html
@@ -18,7 +18,14 @@
     href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
+ <style>
+  @media (max-width: 768px) {
+    .hero-search {
+        margin-top: 0 !important;
+        max-width: 80%;
+    }
+    }
+ </style>
 </head>
 
 <body>
