--- a/demo.html
+++ b/demo.html
@@ -25,6 +25,14 @@
         max-width: 80%;
     }
     }
+
+    .book-gallery .bb {
+      color: #747474 !important;
+      text-decoration: line-through;
+    }
+    .book-gallery .b {
+      color: #333 !important;
+    }
  </style>
 </head>
 
@@ -153,7 +161,7 @@
               <span>Add a</span> guest
             </a>
 
-            <ul class="dropdown-menu p-2 pb-4 px-3" style="border-radius: 1rem; max-height: 400px;">
+            <ul class="dropdown-menu p-2 pb-4 px-3" style="z-index: 100; border-radius: 1rem; max-height: 400px;">
               <li>
                 <div class="dropdown-item p-0">
 
@@ -296,7 +304,6 @@
       <div class="" id="slider-main" style=" height: 0px; overflow: hidden;">
         <div id="discover-box" class="discover-box">
 
-
           <div class="item">
             <img src="./img/g1.jpg" loading="lazy">
 
@@ -307,7 +314,11 @@
                 <p>Short term and vacation rentals</p>
               </div>
               <div>
-                <button class="btn btn-light">See all</button>
+                <a href="listings.html">
+                     <a href="listings.html">
+                  <button class="btn btn-light">See all</button>
+                </a>
+                </a>
               </div>
             </div><!--discover-text end-->
 
@@ -322,7 +333,9 @@
                 <p>Short term and vacation rentals</p>
               </div>
               <div>
-                <button class="btn btn-light">See all</button>
+                   <a href="listings.html">
+                  <button class="btn btn-light">See all</button>
+                </a>
               </div>
             </div><!--discover-text end-->
 
@@ -336,7 +349,9 @@
                 <p>Short term and vacation rentals</p>
               </div>
               <div>
-                <button class="btn btn-light">See all</button>
+                   <a href="listings.html">
+                  <button class="btn btn-light">See all</button>
+                </a>
               </div>
             </div><!--discover-text end-->
 
@@ -350,7 +365,9 @@
                 <p>Short term and vacation rentals</p>
               </div>
               <div>
-                <button class="btn btn-light">See all</button>
+                   <a href="listings.html">
+                  <button class="btn btn-light">See all</button>
+                </a>
               </div>
             </div><!--discover-text end-->
           </div>
@@ -363,7 +380,9 @@
                 <p>Short term and vacation rentals</p>
               </div>
               <div>
-                <button class="btn btn-light">See all</button>
+                   <a href="listings.html">
+                  <button class="btn btn-light">See all</button>
+                </a>
               </div>
             </div><!--discover-text end-->
 
@@ -377,7 +396,9 @@
                 <p>Short term and vacation rentals</p>
               </div>
               <div>
-                <button class="btn btn-light">See all</button>
+                   <a href="listings.html">
+                  <button class="btn btn-light">See all</button>
+                </a>
               </div>
             </div><!--discover-text end-->
           </div>
@@ -417,7 +438,7 @@
                 </div>
                 <p class="card-text bs-3 py-2 mb-0">Distance in kilometers/meters/miles<br>Address of
                   apartment/room<br>Period of time</p>
-                <p><b>$320</b> <Span class="bs-3">per night</Span></p>
+                <p><b class="bb">$350</b> <b class="b" >$300</b> <Span class="bs-3">per night</Span></p>
               </div>
             </a>
             <button class="prev" data-carousel="0"><img src="img/arrow_back.svg" alt=""></button>
@@ -447,7 +468,7 @@
                 </div>
                 <p class="card-text bs-3 py-2 mb-0">Distance in kilometers/meters/miles<br>Address of
                   apartment/room<br>Period of time</p>
-                <p><b>$320</b> <Span class="bs-3">per night</Span></p>
+                  <p><b class="b">$320</b> <Span class="bs-3">per night</Span></p>
               </div>
             </a>
             <button class="prev" data-carousel="1"><img src="img/arrow_back.svg" alt=""></button>
@@ -476,7 +497,7 @@
                 </div>
                 <p class="card-text bs-3 py-2 mb-0">Distance in kilometers/meters/miles<br>Address of
                   apartment/room<br>Period of time</p>
-                <p><b>$320</b> <Span class="bs-3">per night</Span></p>
+                <p><b class="b">$320</b> <Span class="bs-3">per night</Span></p>
               </div>
             </a>
             <button class="prev" data-carousel="1"><img src="img/arrow_back.svg" alt=""></button>
@@ -505,7 +526,7 @@
                 </div>
                 <p class="card-text bs-3 py-2 mb-0">Distance in kilometers/meters/miles<br>Address of
                   apartment/room<br>Period of time</p>
-                <p><b>$320</b> <Span class="bs-3">per night</Span></p>
+              <p><b class="b">$320</b> <Span class="bs-3">per night</Span></p>
               </div>
             </a>
             <button class="prev" data-carousel="1"><img src="img/arrow_back.svg" alt=""></button>
@@ -534,7 +555,7 @@
                 </div>
                 <p class="card-text bs-3 py-2 mb-0">Distance in kilometers/meters/miles<br>Address of
                   apartment/room<br>Period of time</p>
-                <p><b>$320</b> <Span class="bs-3">per night</Span></p>
+              <p><b class="b">$320</b> <Span class="bs-3">per night</Span></p>
               </div>
             </a>
             <button class="prev" data-carousel="1"><img src="img/arrow_back.svg" alt=""></button>
@@ -563,7 +584,7 @@
                 </div>
                 <p class="card-text bs-3 py-2 mb-0">Distance in kilometers/meters/miles<br>Address of
                   apartment/room<br>Period of time</p>
-                <p><b>$320</b> <Span class="bs-3">per night</Span></p>
+                  <p><b class="bb">$350</b> <b class="b" >$300</b> <Span class="bs-3">per night</Span></p>
               </div>
             </a>
             <button class="prev" data-carousel="1"><img src="img/arrow_back.svg" alt=""></button>
@@ -592,7 +613,7 @@
                 </div>
                 <p class="card-text bs-3 py-2 mb-0">Distance in kilometers/meters/miles<br>Address of
                   apartment/room<br>Period of time</p>
-                <p><b>$320</b> <Span class="bs-3">per night</Span></p>
+              <p><b class="b">$320</b> <Span class="bs-3">per night</Span></p>
               </div>
             </a>
             <button class="prev" data-carousel="1"><img src="img/arrow_back.svg" alt=""></button>
@@ -621,7 +642,7 @@
                 </div>
                 <p class="card-text bs-3 py-2 mb-0">Distance in kilometers/meters/miles<br>Address of
                   apartment/room<br>Period of time</p>
-                <p><b>$320</b> <Span class="bs-3">per night</Span></p>
+                  <p><b class="bb">$350</b> <b class="b" >$300</b> <Span class="bs-3">per night</Span></p>
               </div>
             </a>
             <button class="prev" data-carousel="1"><img src="img/arrow_back.svg" alt=""></button>
@@ -648,7 +669,7 @@
                 </div>
                 <p class="card-text bs-3 py-2 mb-0">Distance in kilometers/meters/miles<br>Address of
                   apartment/room<br>Period of time</p>
-                <p><b>$320</b> <Span class="bs-3">per night</Span></p>
+                  <p><b class="bb">$350</b> <b class="b" >$300</b> <Span class="bs-3">per night</Span></p>
               </div>
             </a>
             <button class="prev" data-carousel="1"><img src="img/arrow_back.svg" alt=""></button>
