--- a/header-home.html
+++ b/header-home.html
@@ -1,4 +1,4 @@
-<section class="hero-section hero-section-1 pt-0 pb-0">
+<section class="hero-section hero-section-1 pt-0 pb-0" style="overflow: hidden;">
   <div class="header-section " id="bg-white"
     style="position: fixed; left: 0; right: 0;  box-shadow: none; z-index: 100 !important; background: transparent;"  >
     <header class="d-flex flex-wrap align-items-center justify-content-between justify-content-md-between p-3 mt-0">
@@ -62,7 +62,7 @@
     </header>
   </div>
 
-  <div class="hero-search" style="margin-top: 6rem;">
+  <div class="hero-search" style="overflow: hidden; margin-top: 6rem;">
     <h1>Bringing the military community together</h1>
 
     <div class="d-flex mb-4" style=" min-height: 100px; height: fit-content;">
