--- a/calander.html
+++ b/calander.html
@@ -22,8 +22,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-    <section class="calander-main container p-2 border rounded" style="background-color: #fff ;">
-        <div class="w-100 d-flex flex-column">
+    <section class="calander-main container p-2 border rounded" style=" background-color: #fff ;">
+        <div class="w-100 d-flex flex-column" style="z-index: 999  !important;">
 
             <div>
                 <p class="offer-header-font-2 text-center">Choose stay Duration</p>
