--- a/LoginPage.html
+++ b/LoginPage.html
@@ -480,17 +480,19 @@
 
                         <div class="mobile-display-flex mb-4 ">
                             <div class="" id="toggleLinkReverse">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                                    <path d="M15 18L9 12L15 6" stroke="#090A0A" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                  </svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none">
+                                    <path d="M15 18L9 12L15 6" stroke="#090A0A" stroke-width="1.5"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
                             </div>
-                            <p class="mx-auto mb-0 who-can-join">  
-                               Who can join?
+                            <p class="mx-auto mb-0 who-can-join">
+                                Who can join?
                             </p>
                         </div>
 
                         <div class="  logoContainer pb-3">
-                          <img src="img/logo.svg" alt="">
+                            <img src="img/logo.svg" alt="">
                         </div>
                         <h2>
                             Bringing the military <br />
@@ -498,8 +500,8 @@
                         </h2>
 
                         <div>
-                            <ul class="p-0">
-                                <li>
+                            <ul class="p-0 doted-line-main">
+                                <li class="first-after">
                                     Active Duty
                                 </li>
                                 <li>
@@ -526,7 +528,7 @@
                                 <li>
                                     Dependents
                                 </li>
-                                <li>
+                                <li class="last-before">
                                     Parents
                                 </li>
 
