--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </header>
     </div>
   
-    <div class="hero-search" style=" padding-top: 6rem;">
+    <div class="hero-search" style=" padding-top: 6rem; padding-bottom: 3rem;">
       <h1>Bringing the military community together</h1>
   
       <div class="d-flex mb-4" style=" min-height: 100px; height: fit-content;">
@@ -747,7 +747,7 @@
   </section>
 
 
-  <section class="" style="padding-top: 5rem !important;" id="item-why">
+  <section class="pb-5" style="padding-top: 5rem !important; " id="item-why">
     <div class="container-xxl container-sm">
       <h3 class="mb-4">Who can join?</h2>
 
@@ -771,7 +771,7 @@
   </section>
 
 
-  <section  class="mt-5">
+  <section  class="py-5" style="margin-top: 5rem !important;">
     <div class=" review-box-m container-xxl container-sm">
       <h3 class="mb-4">Reviews from our community</h3>
 
