--- a/demo1.html
+++ b/demo1.html
@@ -45,7 +45,7 @@
   </div>
 
 
-  <section class="hero-section hero-section-1 pt-0 pb-0" style="overflow: hidden;">
+  <section class="hero-section hero-section-1 pt-0 pb-0" style="background-image: url(img/demo-3.avif); overflow: hidden;">
     <div class="header-section " id="bg-white"
       style="position: fixed; left: 0; right: 0;  box-shadow: none; z-index: 100 !important; background: transparent;"  >
       <header class="d-flex flex-wrap align-items-center justify-content-between justify-content-md-between p-3 mt-0">
@@ -288,7 +288,7 @@
           <div class="book-gallery" style="position: relative;">
             <a href="details.html">
               <div class="bgallery-img mb-3">
-                    <img src="img/g1.jpg" loading="lazy" alt="Image 3">
+                    <img src="img/demo-1.avif" loading="lazy" alt="Image 3">
               </div>
               <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
@@ -309,7 +309,7 @@
           <div class="book-gallery" style="position: relative;">
             <a href="details.html">
               <div class="bgallery-img mb-3">
-                    <img src="img/g1.jpg" loading="lazy" alt="Image 3">
+                    <img src="img/demo-1.jpg" loading="lazy" alt="Image 3">
               </div>
               <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
@@ -330,7 +330,7 @@
           <div class="book-gallery" style="position: relative;">
             <a href="details.html">
               <div class="bgallery-img mb-3">
-                    <img src="img/g1.jpg" loading="lazy" alt="Image 3">
+                    <img src="img/demo-3.avif" loading="lazy" alt="Image 3">
               </div>
               <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
@@ -351,7 +351,7 @@
           <div class="book-gallery" style="position: relative;">
             <a href="details.html">
               <div class="bgallery-img mb-3">
-                    <img src="img/g1.jpg" loading="lazy" alt="Image 3">
+                    <img src="img/demo-4.jpg" loading="lazy" alt="Image 3">
               </div>
               <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
@@ -372,7 +372,7 @@
           <div class="book-gallery" style="position: relative;">
             <a href="details.html">
               <div class="bgallery-img mb-3">
-                    <img src="img/g1.jpg" loading="lazy" alt="Image 3">
+                    <img src="img/demo-5.jpg" loading="lazy" alt="Image 3">
               </div>
               <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
@@ -393,7 +393,7 @@
           <div class="book-gallery" style="position: relative;">
             <a href="details.html">
               <div class="bgallery-img mb-3">
-                    <img src="img/g1.jpg" loading="lazy" alt="Image 3">
+                    <img src="img/demo-1.avif" loading="lazy" alt="Image 3">
               </div>
               <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
@@ -414,7 +414,7 @@
           <div class="book-gallery" style="position: relative;">
             <a href="details.html">
               <div class="bgallery-img mb-3">
-                    <img src="img/g1.jpg" loading="lazy" alt="Image 3">
+                    <img src="img/demo-1.jpg" loading="lazy" alt="Image 3">
               </div>
               <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
@@ -435,7 +435,7 @@
           <div class="book-gallery" style="position: relative;">
             <a href="details.html">
               <div class="bgallery-img mb-3">
-                    <img src="img/g1.jpg" loading="lazy" alt="Image 3">
+                    <img src="img/demo-3.avif" loading="lazy" alt="Image 3">
               </div>
               <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
@@ -456,7 +456,7 @@
           <div class="book-gallery" style="position: relative;">
             <a href="details.html">
               <div class="bgallery-img mb-3">
-                    <img src="img/g1.jpg" loading="lazy" alt="Image 3">
+                    <img src="img/demo-5.jpg" loading="lazy" alt="Image 3">
               </div>
               <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
@@ -476,7 +476,7 @@
           <div class="book-gallery" style="position: relative;">
             <a href="details.html">
               <div class="bgallery-img mb-3">
-                    <img src="img/g1.jpg" loading="lazy" alt="Image 3">
+                    <img src="img/demo-4.jpg" loading="lazy" alt="Image 3">
               </div>
               <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
