--- a/demo1.html
+++ b/demo1.html
@@ -764,7 +764,45 @@
   <script src="js/carousel.js"></script>
   <script src="js/script.js"></script>
 
+  
+
 <script>
+
+
+// slick slider 
+
+$(document).ready(function () {
+  try {
+    $('.discover-box').slick({
+      lazyLoad: 'ondemand',
+      slidesToShow: 3,
+      arrows: false,
+      prevArrow: '<button class="sk-button sk-round arrow-prev"><span class="sk-icons"><svg width="20" height="20"><use xlink:href="#skiconsLeftCheveron"></use></svg></span></button>',
+      nextArrow: '<button class="sk-button sk-round arrow-next"><span class="sk-icons"><svg width="20" height="20"><use xlink:href="#skiconsLeftCheveron"></use></svg></span></button>',
+      dots: false,
+      autoplay: true,
+      responsive: [
+        {
+          breakpoint: 1200,
+          settings: {
+            slidesToShow: 2,
+          }
+        },
+        {
+          breakpoint: 800,
+          settings: {
+            slidesToShow: 1
+          }
+        }
+      ]
+    });
+  }
+  catch (ex) {
+    console.log("Error initiating carousel" + ex)
+  }
+  document.getElementById("slider-main").style.height = "auto"
+});
+
 //index header 
 window.addEventListener('scroll', function () {
     // Check if window width is greater than or equal to 700px
