--- a/demo1.html
+++ b/demo1.html
@@ -168,113 +168,101 @@
 
   <section class="py-5">
     <div class="container-xxl container-sm discover-main">
-      <h3>A trusted option for whatever you need</h3>
+      <h3>Discover more categories</h3>
 
-<div class="" id="slider-main" style=" height: 0px; overflow: hidden;">
-  <div id="discover-box" class="discover-box">
+      <div class="discover-box">
 
 
-    <div class="item">
-      <img src="./img/g1.jpg" loading="lazy">
-      <div class="discover-text d-flex">
-        <div>
-          <span>Collection</span>
-          <p>Short term and vacation rentals</p>
+        <div class="item">
+          <img src="./img/g1.jpg" loading="lazy">
+
+
+          <div class="discover-text d-flex">
+            <div>
+              <span>Collection</span>
+              <p>Short term and vacation rentals</p>
+            </div>
+            <div>
+              <button class="btn btn-light">See all</button>
+            </div>
+          </div><!--discover-text end-->
+
         </div>
-        <div>
-          <a href="listings.html">
-            <button class="btn btn-light">See all</button>
-          </a>
+        <div class="item">
+
+          <img src="./img/g2.jpg" loading="lazy">
+
+          <div class="discover-text d-flex">
+            <div>
+              <span>Collection</span>
+              <p>Short term and vacation rentals</p>
+            </div>
+            <div>
+              <button class="btn btn-light">See all</button>
+            </div>
+          </div><!--discover-text end-->
+
         </div>
-      </div><!--discover-text end-->
+        <div class="item">
+          <img src="./img/g3.jpg" loading="lazy">
 
-    </div>
-    <div class="item">
+          <div class="discover-text d-flex">
+            <div>
+              <span>Collection</span>
+              <p>Short term and vacation rentals</p>
+            </div>
+            <div>
+              <button class="btn btn-light">See all</button>
+            </div>
+          </div><!--discover-text end-->
 
-      <img src="./img/g2.jpg" loading="lazy">
-
-      <div class="discover-text d-flex">
-        <div>
-          <span>Collection</span>
-          <p>Short term and vacation rentals</p>
         </div>
-        <div>
-          <a href="listings.html">
-            <a href="listings.html">
-            <button class="btn btn-light">See all</button>
-          </a>
-          </a>
+        <div class="item">
+          <img src="./img/g4.jpg" loading="lazy">
+
+          <div class="discover-text d-flex">
+            <div>
+              <span>Collection</span>
+              <p>Short term and vacation rentals</p>
+            </div>
+            <div>
+              <button class="btn btn-light">See all</button>
+            </div>
+          </div><!--discover-text end-->
         </div>
-      </div><!--discover-text end-->
+        <div class="item">
+          <img src="./img/g3.jpg" loading="lazy">
 
-    </div>
-    <div class="item">
-      <img src="./img/g3.jpg" loading="lazy">
+          <div class="discover-text d-flex">
+            <div>
+              <span>Collection</span>
+              <p>Short term and vacation rentals</p>
+            </div>
+            <div>
+              <button class="btn btn-light">See all</button>
+            </div>
+          </div><!--discover-text end-->
 
-      <div class="discover-text d-flex">
-        <div>
-          <span>Collection</span>
-          <p>Short term and vacation rentals</p>
         </div>
-        <div>
-          <a href="listings.html">
-            <button class="btn btn-light">See all</button>
-          </a>
+        <div class="item">
+          <img src="./img/g2.jpg" loading="lazy">
+
+          <div class="discover-text d-flex">
+            <div>
+              <span>Collection</span>
+              <p>Short term and vacation rentals</p>
+            </div>
+            <div>
+              <button class="btn btn-light">See all</button>
+            </div>
+          </div><!--discover-text end-->
         </div>
-      </div><!--discover-text end-->
-
-    </div>
-    <div class="item">
-      <img src="./img/g4.jpg" loading="lazy">
-
-      <div class="discover-text d-flex">
-        <div>
-          <span>Collection</span>
-          <p>Short term and vacation rentals</p>
-        </div>
-        <div>
-          <a href="listings.html">
-            <button class="btn btn-light">See all</button>
-          </a>
-        </div>
-      </div><!--discover-text end-->
-    </div>
-    <div class="item">
-      <img src="./img/g3.jpg" loading="lazy">
-
-      <div class="discover-text d-flex">
-        <div>
-          <span>Collection</span>
-          <p>Short term and vacation rentals</p>
-        </div>
-        <div>
-          <a href="listings.html">
-            <button class="btn btn-light">See all</button>
-          </a>
-        </div>
-      </div><!--discover-text end-->
-
-    </div>
-    <div class="item">
-      <img src="./img/g2.jpg" loading="lazy">
-
-      <div class="discover-text d-flex">
-        <div>
-          <span>Collection</span>
-          <p>Short term and vacation rentals</p>
-        </div>
-        <div>
-          <a href="listings.html">
-            <button class="btn btn-light">See all</button>
-          </a>
-        </div>
-      </div><!--discover-text end-->
-    </div>
 
 
 
-  </div><!--discover-box end -->
-</div>
+      </div><!--discover-box end -->
+
+
     </div>
   </section>
 
