--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
   <section class="py-5">
     <div class="container-xxl container-sm discover-main">
-      <h3>A trusted option for whatever you need</h3>
+      <h3>A trusted option for whatever you need d</h3>
 
 
 
