--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
   <section class="py-5">
     <div class="container-xxl container-sm discover-main">
-      <h3>A trusted option for whatever you need d</h3>
+      <h3>A trusted option for whatever you need </h3>
 
 
 
@@ -662,7 +662,6 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
   <script src="js/jquery-3.7.1.js"></script>
   <script src="js/headerFooter.js"></script>
-  <script src="js/script.js"></script>
 
   <script>
     document.addEventListener("DOMContentLoaded", function () {
