--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link href="css/style.css" rel="stylesheet">
   <link href="css/menu.css" rel="stylesheet">
   <link rel="stylesheet" href="css/s-custom.css">
-  <link rel="stylesheet" href="css/s-custom2.css">
   <link rel="stylesheet" href="css/fonts.css">
   <link href="css/slick-slider.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -104,7 +103,7 @@
 
   <section class="py-5">
     <div class="container-xxl container-sm discover-main">
-      <h3>A trusted option for whatever you need </h3>
+      <h3>A trusted option for whatever you need 1 </h3>
 
 
 
