--- a/listings.html
+++ b/listings.html
@@ -110,7 +110,7 @@
       <div class="row book-main">
         <div class="cd-col">
           <div class="book-gallery">
-            <div class="bgallery-img mb-3"> <img src="img/g2.jpg" alt=""></div>
+            <div class="bgallery-img mb-3"> <img src="img/cycle.jpg" alt=""></div>
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-center">
                 <h5>Apartment</h5>
